--- a/Final Project/contact.html
+++ b/Final Project/contact.html
@@ -68,7 +68,7 @@
           <div class="success-message" id="successMessage"></div>
           <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-
+    </div>
       <!-- Modal for To-Do List -->
         <div class="modal fade" id="todoListModal" tabindex="-1" aria-labelledby="todoListModalLabel" aria-hidden="true">
           <div class="modal-dialog">
