--- a/Final Project/contact.html
+++ b/Final Project/contact.html
@@ -50,25 +50,47 @@
       </div>
     </nav>
     <hr>
-    <div class="container mt-4">
-      <h2>Contact Us</h2>
-      <form onsubmit="return validateForm()">
-          <div class="mb-3">
-              <label for="name" class="form-label">Name</label>
-              <input type="text" class="form-control" id="name" placeholder="Your name">
-          </div>
-          <div class="mb-3">
-              <label for="email" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="email" placeholder="Your email">
-          </div>
-          <div class="mb-3">
-              <label for="message" class="form-label">Message</label>
-              <textarea class="form-control" id="message" rows="4" placeholder="Your message"></textarea>
-          </div>
-          <div class="success-message" id="successMessage"></div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
+    <div class="container" id="container">
+        <h2 class="text-center mt-5">Contact Us</h2>
+        <form id="contactForm">
+              <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <fieldset class="mb-5">
+                  <div class="form-group">
+                      <label for="name">Name</label>
+                      <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name">
+                  </div>
+                  <div class="form-group">
+                      <label for="email">Email</label>
+                      <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email">
+                  </div>
+              <input type="button" name="next" class="next action-button" value="Next" />
+              </fieldset>
+              <fieldset class="mb-5">
+                  <div class="form-group">
+                      <label for="subject">Subject</label>
+                      <input type="text" id="subject" name="subject" class="form-control" placeholder="Enter the subject">
+                  </div>
+                  <div class="form-group">
+                      <label for="message">Message</label>
+                      <textarea id="message" name="message" class="form-control" placeholder="Enter your message"></textarea>
+                  </div>
+                  <input type="button" name="previous" class="previous action-button" value="Previous" />
+                  <input type="button" name="next" class="next action-button" value="Next" />
+              </fieldset>
+              <fieldset>
+                  <div class="form-group">
+                      <label for="contactNumber">Contact Number</label>
+                      <input type="text" id="contactNumber" name="contactNumber" class="form-control" placeholder="Enter your contact number">
+                  </div>
+                  <input type="button" name="previous" class="previous action-button" value="Previous" />
+                  <input type="submit" name="submit" class="submit action-button" value="Submit" />
+              </fieldset>
+          </form>
+     </div>
+
+
       <!-- Modal for To-Do List -->
         <div class="modal fade" id="todoListModal" tabindex="-1" aria-labelledby="todoListModalLabel" aria-hidden="true">
           <div class="modal-dialog">
